# sparks

./: README.md
src/spark/spark_tutorials/spark_iflytek/: CMakeLists.txt  call.bnf  call2.bnf  package.xml  readme.md
src/spark/spark_tutorials/spark_iflytek/include/: wb_vad_c.h  xf_asr.h  xf_tts.h
src/spark/spark_tutorials/spark_iflytek/launch/: voice_command.launch  xf.launch
src/spark/spark_tutorials/spark_iflytek/msc/res/tts/: xiaofeng.jet  xiaoyan.jet
src/spark/spark_tutorials/spark_iflytek/src/: parse.py  vad.cpp  voice_command.py  wb_vad.cpp  xf_asr.cpp  xf_tts.cpp
src/spark/spark_tutorials/spark_pocketsphinx/: CMakeLists.txt  package.xml
src/spark/spark_tutorials/spark_slam/: CMakeLists.txt  package.xml
src/spark/spark_tutorials/spark_slam/launch/: astra_gmapping.launch  gmapping_slam.launch  gmapping_slam_no_rviz.launch  spark_bringup_no_rviz.launch  spark_description_no_rviz.launch
src/spark/spark_tutorials/spark_slam/src/: nav_voice_control.cpp
src/spark/spark_tutorials/spark_teatask/doc/: readme.md
src/spark/spark_tutorials/spark_teatask/spark_fetchtea/launch/: bringup.launch  spark_fetchtea.launch
src/spark/spark_tutorials/spark_teatask/spark_fetchtea/nodes/: fetchtea_main.py  s_fetchtea.py
src/spark/spark_tutorials/spark_teatask/spark_map_server/map/: spark_map.yaml
src/spark/spark_tutorials/spark_teatask/spark_teatask/: CMakeLists.txt  package.xml
src/spark/spark_tutorials/spark_tutorials/: CMakeLists.txt  package.xml
src/spark/spark_tutorials/spark_urdf/: CMakeLists.txt  package.xml  readme.md
src/spark/spark_tutorials/spark_urdf/launch/: box_robot_base_gazebo.launch
src/spark/spark_tutorials/spark_urdf/param/: controller.yaml
src/spark/spark_tutorials/spark_urdf/urdf/: base.gazebo  base.urdf.xacro  box_robot_base_only.xacro  box_robot_base_with_laser.xacro
src/spark/spark_v03/spark/spark_test/: CMakeLists.txt  package.xml
src/spark/spark_v03/spark_app/follower_velocity_smoother/: package.xml
src/spark/spark_v03/spark_app/spark_follower/: CMakeLists.txt
